--- a/workflow-templates/criteo-cookbooks-ci.yml
+++ b/workflow-templates/criteo-cookbooks-ci.yml
@@ -4,6 +4,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ $default-branch ]
+    tags: [ 'v*' ]
   pull_request:
     branches: [ $default-branch ]
   workflow_dispatch:
@@ -34,3 +35,17 @@ jobs:
           ruby-version: 2.5
           bundler-cache: true
       - run: KITCHEN_LOCAL_YAML=.kitchen.docker.yml bundle exec kitchen verify ${{ matrix.instance }}
+  supermarket:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: [kitchen]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Publish to supermarket
+      uses: afaundez/chef-supermarket-action@8cdbe1cccbe1ecd8685b2ea8f48780135bae7cee
+      with:
+        user: criteo
+        cookbook: nexus3
+        category: Utilities
+      env:
+        SUPERMARKET_API_KEY: ${{ secrets.SUPERMARKET_API_KEY }}
